--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,10 @@ Author:             展新(pizner@gmail.com)
 @font-face {
     font-family: "FontAwesome";
     src: url('font/fontawesome-webfont.eot');
-    src: url('font/fontawesome-webfont.eot?#iefix') format('eot'), url('font/fontawesome-webfont.woff') format('woff'), url('font/fontawesome-webfont.ttf') format('truetype'), url('../font/fontawesome-webfont.svg#FontAwesome') format('svg');
+    src: url('font/fontawesome-webfont.eot?#iefix') format('eot'), 
+         url('font/fontawesome-webfont.woff') format('woff'), 
+         url('font/fontawesome-webfont.ttf') format('truetype'), 
+         url('../font/fontawesome-webfont.svg#FontAwesome') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -951,4 +954,3 @@ pre.prettyprint{
     border-radius: 0 2px 2px 0;
     box-shadow: 0px 4px 4px #e8e8e8;
 }
-
