--- a/static/style.css
+++ b/static/style.css
@@ -462,7 +462,7 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 /*************************
  * lotus layout
 *************************/
-.lotus { width: 720px; padding: 1em 0 0em 0; margin: 0 auto; }
+.lotus { /*width: 720px;*/ padding: 1em 0 0em 0; margin: 0 auto;}
 .index { padding: 1em 0 0 0;}
 .index h3 { border-bottom: none; font-weight: bold; }
 .lotus-nav {
@@ -755,7 +755,7 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 *************************/
 @media only screen and (min-width: 1440px) {
     .lotus {
-        width: 1024px;
+        /*width: 1024px;*/
     }
     .lotus-post {
       /*
@@ -772,12 +772,19 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
     }
 }
 
+@media only screen and (min-width: 1024px) {
+    .lotus {
+      margin-left: 10em;
+    }
+}
+
 /*************************
  * iPad
 *************************/
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
+@media only screen and (min-width: 768px) {
 	.lotus {
-		width: 600px;
+		/*width: 600px;*/
+    margin: 0 4em 0 10em;
 	}
 
 }
