--- a/static/style.css
+++ b/static/style.css
@@ -69,7 +69,7 @@ ins, a { text-decoration: none; }
 u, .lotus-u { text-decoration: underline; }
 mark { background: #FFFB99; }
 pre, code { font-family: "Courier New", Courier, monospace; overflow-x: auto; vertical-align: middle; }
-pre { font-size: 12px; border: 1px solid #d8d8d8; border-left-width: 0.4em;  background: #000; padding: 10px; }
+pre { font-size: 12px; border: 1px solid #d8d8d8; border-left-width: 0.4em;  background: #fff; padding: 10px; }
 code { color: #4d4d4d; background: rgba(214, 214, 214, 0.5); padding: 0 0.2em; border: 1px solid #bdbdbd; border-radius: 2px 2px; vertical-align:top;}
 small { font-size: 12px; color: #888; }
 
@@ -654,14 +654,17 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 	color: #f3f2ee;
 }
 .lotus-backtop {
-    width: 34px;
-    height: 34px;
-    line-height: 34px;
+    width: 54px;
+    height: 54px;
+    line-height: 54px;
     text-align: center;
     overflow:  hidden;
     font-size: 40px;
     color: #474747;
     opacity: 0.5;
+}
+.lotus-backtop [class^="icon-"]:before, .lotus-backtop [class*=" icon-"]:before{
+  font-size: 48px;
 }
 .lotus-backtop:hover {
     opacity: .8;
