--- a/static/pygments.css
+++ b/static/pygments.css
@@ -1,5 +1,5 @@
 .hll { background-color: #ffffcc }
-.c { color: #aaaaaa; font-style: italic } /* Comment */
+.c { color: #aaaaaa;} /* Comment */
 .err { color: #FF0000; background-color: #FFAAAA } /* Error */
 .k { color: #0000aa } /* Keyword */
 .cm { color: #aaaaaa; font-style: italic } /* Comment.Multiline */
@@ -26,7 +26,7 @@
 .s { color: #aa5500 } /* Literal.String */
 .na { color: #1e90ff } /* Name.Attribute */
 .nb { color: #00aaaa } /* Name.Builtin */
-.nc { color: #00aa00; text-decoration: underline } /* Name.Class */
+.nc { color: #00aa00;} /* Name.Class */
 .no { color: #aa0000 } /* Name.Constant */
 .nd { color: #888888 } /* Name.Decorator */
 .ni { color: #880000; font-weight: bold } /* Name.Entity */
