--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
 <meta name="description" content="{{ page.description }}" />
 <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" media="all" href="/static/style.css" />
-<link rel="stylesheet" type="text/css" media="all" href="/static/pygments.css">
+<link rel="stylesheet" type="text/css" media="all" href="/static/style.css?v=0805" />
+<link rel="stylesheet" type="text/css" media="all" href="/static/pygments.css?v=0805">
 <!--[if lt IE 9]>
 <script src="/static/js/html5.js" type="text/javascript"></script>
 <![endif]-->
