--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@ html { color: #1F0909; background: #f3f2ee; -webkit-text-size-adjust: 100%; -ms-
 body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, group, menu, nav, section { margin: 0; padding: 0; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 audio, canvas, video { display: inline-block;  }
-body, button, input, select, textarea { font: 500 14px/1.8 "\5FAE\8F6F\96C5\9ED1", 'Hiragino Sans GB', sans-serif; }
+body, button, input, select, textarea { font: 500 14px/1.8 "Helvetica Neue",Helvetica,Arial,sans-serif; }
 table { border-collapse: collapse; border-spacing: 0; width: 100%; }
 th { text-align: inherit; }
 fieldset, img { border: 0; }
@@ -69,7 +69,7 @@ ins, a { text-decoration: none; }
 u, .lotus-u { text-decoration: underline; }
 mark { background: #FFFB99; }
 pre, code { font-family: "Lucida Console", Consolas, Monaco; overflow-x: auto; vertical-align: middle; }
-pre { margin-top: 1em; font-size: 12px; border-left: 0.4em solid #ddd; background: #F9F9F9; padding: 10px; line-height: 1.4; word-wrap:break-word; overflow:hidden;}
+pre { margin-top: 1em; font-size: 12px; border-left: 0.4em solid #ddd; background: #F9F9F9; padding: 10px; line-height: 1.5; word-wrap:break-word; overflow:hidden;}
 code { color: #4d4d4d; background: rgba(214, 214, 214, 0.5); border: 1px solid #bdbdbd; border-radius: 2px 2px; vertical-align:top;}
 small { font-size: 12px; color: #888; }
 
@@ -115,6 +115,8 @@ a [class^="icon-"], a [class*=" icon-"] {
 }
 li [class^="icon-"], li [class*=" icon-"] {
     display: inline-block;
+    vertical-align: -3px;
+    margin: 0 1em 0 2.8em;
     width: 1.25em;
     text-align: center;
 }
@@ -433,7 +435,7 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 .lotus-h1, .lotus-h2, .lotus-h3, .lotus-h4, .lotus-h5, .lotus-h6 { line-height: 1.5;}
 .lotus h1, .lotus-h1 { font-size: 2.2em; }
 .lotus h2, .lotus-h2 { font-size: 1.8em; }
-.lotus h3, .lotus-h3 { font-size: 1.4em; border-bottom: 1px dotted #d8d8d8; margin-top: 1.4em;}
+.lotus h3, .lotus-h3 { font-size: 1.4em; border-bottom: 1px dotted #d8d8d8;}
 .lotus h4, .lotus-h4 { font-size: 1.2em; font-weight: bold; }
 .lotus h5, .lotus h6, .lotus-h5, .lotus-h6 { font-size: 1em; }
 .lotus .lotus-break { line-height:  18px; font-size: 14px; font-style: italic; font-weight: 400; border-bottom: 1px dotted #e8e8e8; color: #898989; }
@@ -461,10 +463,12 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 /*************************
  * lotus layout
 *************************/
+.logo{ padding: 2.5em 0; text-align: center; color: #fff; font-size: 24px;}
+.logo img{ width: 72px; border-radius: 50%;}
 .lotus { /*width: 720px; padding: 1em 0 0em 0;*/ margin: 0 auto;}
 .index h3 { border-bottom: none; font-weight: bold; }
 .lotus-nav {
-	width: 90px;
+	width: 13em;
 	height: 100%;
 	background: #474747;
 	background: -moz-linear-gradient( 180deg, #292929 0%, #404040 8%, #474747 14%, #474747 100%);
@@ -477,9 +481,9 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 	top: 0;
 }
 .lotus-nav ul { list-style: none; width: 100%; margin: 0 0; border-bottom: 1px solid #313131; }
-.lotus-nav ul li { height: 54px; display: block; font-size: 20px; line-height: 54px; text-align: center; border-top: 1px solid #313131; overflow: hidden; }
+.lotus-nav ul li { height: 54px; display: block; font-size: 20px; line-height: 54px; text-align: left; border-top: 1px solid #313131; overflow: hidden; }
 .lotus-nav ul .home { margin-bottom: 3.8em; border-top: 0; }
-.lotus-nav ul li a { color: #ffffff; display: block; cursor: pointer; }
+.lotus-nav ul li a { color: #ffffff; display: block; cursor: pointer; font-size: 16px; }
 .lotus-nav ul li a:hover, .lotus-nav ul .current a { text-decoration: none; 
 	box-shadow: 1px 1px 24px rgba(0, 0, 0, 0.8) inset;
     -moz-transition:  box-shadow .3s linear;
@@ -492,9 +496,10 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 	border-bottom: 1px solid #d0d0d0;
 }
 .lotus-article {
-	margin: 3em 0 2em 0;
+	margin: 3em 0 0 0;
   overflow: hidden;
   *zoom: 1;
+  min-height: 600px;
 }
 .category{
   float: right;
@@ -678,15 +683,13 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
     text-decoration: none;
 }
 .lotus-meta {
+    font-size: 12px;
     color: #a8a8a8;
 }
 .rpost{
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
   padding: 1.5em 2em;
   background-color: #fff;
-}
-.rpost .aside{
-  font-size: 12px;
 }
 .archives-year{
   font-size: 1.5em;
@@ -802,7 +805,7 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 @media only screen and (min-width: 768px) {
 	.lotus {
 		/*width: 600px;*/
-    margin: 0 4em 0 10em;
+    margin: 0 3em 0 16em;
 	}
 
 }
@@ -985,3 +988,6 @@ pre.prettyprint{
     border-radius: 0 2px 2px 0;
     box-shadow: 0px 4px 4px #e8e8e8;
 }
+.categories{ overflow: hidden; *zoom: 1;}
+.categories a{ float: left; margin: 5px 10px 0 0; padding: 0 8px; border-radius: 3px; list-style: none; font-size: 14px; background-color: #ddd; color: #555;}
+.categories a:hover{ background-color: #F3F2EE; text-decoration: none;}
