--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     <nav class="lotus-nav">
     	<div class="logo">
     		<a href="/index.html" title="logo"><img src="/static/images/logo.jpg" alt=""></a>
-    		<p>chan's blog</p>
+    		<p>{{ site.title }}</p>
     	</div>
         <ul>
             {% for link in site.nav %}
