--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,20 +2,14 @@
 <html id="J-html" class="">
 <head>
 <meta charset="UTF-8" />
-<title>
-    {% if page.title %}
-        {{ page.title }}
-    {% else %}
-        {{ site.title }}
-    {% endif %}
-</title>
+<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="generator" content="Jekyll" />
 <meta name="author" content="{{ site.author.name }}" />
 <meta name="description" content="{{ page.description }}" />
 <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" media="all" href="/static/style.css?v=0805" />
-<link rel="stylesheet" type="text/css" media="all" href="/static/pygments.css?v=0805">
+<link rel="stylesheet" type="text/css" media="all" href="/static/style.css" />
+<link rel="stylesheet" type="text/css" media="all" href="/static/pygments.css">
 <!--[if lt IE 9]>
 <script src="/static/js/html5.js" type="text/javascript"></script>
 <![endif]-->
@@ -23,7 +17,7 @@
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
 
-    <nav class="lotus-nav">
+    <nav>
     	<div class="logo">
     		<a href="/index.html" title="logo"><img src="/static/images/logo.jpg" alt=""></a>
     		<p>{{ site.title }}</p>
@@ -40,7 +34,7 @@
 	            {% endif %}
 	            <li class="{{ homeClass }}{{ active }}">
 	                <a href="{{ link.url }}" rel="bookmark" title="{{link.text}}">
-	                    <i class="{{ link.icon }}"></i>{{ link.text }}
+	                    <i class="{{ link.icon }}"></i><span class="text">{{ link.text }}</span>
 	                </a>
 	                {{ indicator }}
 	            </li>
