--- a/static/sass/_reset.scss
+++ b/static/sass/_reset.scss
@@ -1,47 +1,39 @@
-html{font-family:"Helvetica Neue",Helvetica,STHeiTi,Arial,sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;font-size:62.5%;}
-body{margin:0;font-size:toREM(28);line-height:1.5;color:#333;background-color:#f3f4f8;height:100%;overflow-x:hidden;-webkit-overflow-scrolling:touch;}
-article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block;}
-audio,canvas,progress,video{display:inline-block;vertical-align:baseline;}
-audio:not([controls]){display:none;height:0;}
-[hidden],template{display:none;}
-svg:not(:root){overflow:hidden;}
-a{background:transparent;text-decoration:none;-webkit-tap-highlight-color:transparent;color:#08c;}
-a:active{outline:0;}
-a:active{color:#069;}
-abbr[title]{border-bottom:1px dotted;}
-b,strong{font-weight:bold;}
-dfn{font-style:italic;}
-mark{background:#ff0;color:#000;}
-small{font-size:80%;}
-sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}
-sup{top:-0.5em;}
-sub{bottom:-0.25em;}
-img{border:0;vertical-align:top;}
-hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0;}
-pre{overflow:auto;white-space:pre;white-space:pre-wrap;word-wrap:break-word;}
-code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em;}
-button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0;}
-button{overflow:visible;}
-button,select{text-transform:none;}
-button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:none;cursor:pointer;}
-button[disabled],html input[disabled]{cursor:default;}
-button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
-input{line-height:normal;outline:0;}
-input[type="checkbox"],input[type="radio"]{padding:0;}
-input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto;}
-input[type="search"]{-webkit-appearance:textfield;}
-input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}
-fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em;}
-legend{border:0;padding:0;}
-textarea{overflow:auto;resize:vertical;}
-optgroup{font-weight:bold;}
-table{border-collapse:collapse;border-spacing:0;}
-td,th{padding:0;}
-html,button,input,select,textarea{font-family:"Helvetica Neue",Helvetica,STHeiTi,Arial,sans-serif;}
-h1,h2,h3,h4,h5,h6,p,figure,form,blockquote{margin:0;}
-ul,ol,li,dl,dd{margin:0;padding:0;}
-ul,ol{list-style:none outside none;}
-input::-moz-placeholder,textarea::-moz-placeholder{color:#ccc;}
-input:-ms-input-placeholder,textarea:-ms-input-placeholder{color:#ccc;}
-input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{color:#ccc;}
-*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+//--------------------
+// reset style
+//--------------------
+html { color: #1F0909; background: #f3f2ee; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, group, menu, nav, section { margin: 0; padding: 0; }
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+audio, canvas, video { display: inline-block;  }
+body, button, input, select, textarea { font: 500 14px/1.8 "Helvetica Neue",Helvetica,Arial,sans-serif; }
+table { border-collapse: collapse; border-spacing: 0; width: 100%; }
+th { text-align: inherit; }
+fieldset, img { border: 0; }
+img { -ms-interpolation-mode: bicubic; }
+iframe { display: block; }
+blockquote { padding: 0.5em 1em 0.1em 1em; margin-bottom: 1em; background: rgba(214, 214, 214, 0.5); border-width: 1px 1px 1px 0.4em; border-color:#d8d8d8 #d8d8d8 #d8d8d8 #d0d0d0; border-style: solid; vertical-align: middle; border-radius: 0px 2px 2px 0; }
+blockquote blockquote { padding: 0 1em 0 1em; margin-left: 2em; border-width: 1px 1px 1px 0.4em; border-style: solid; border-color: rgba(120, 120, 120, 0.1); }
+acronym, abbr { border-bottom: 1px dotted; font-variant: normal; }
+abbr { cursor: help; }
+del { text-decoration: line-through; }
+address, caption, cite, code, den, em, th, var { font-style: normal; font-weight: 500; }
+ul, ol { list-style: none; }
+caption, th { text-align: left; }
+q:before, q:after { content: ''; }
+sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: text-top\9; }
+:root sub, :root sup{ vertical-align: baseline; }
+sup { top: -0.5em; }
+sub { bottom: -0.25em; }
+a { color: #1982D1; font-size:  100%; }
+a:hover { text-decoration: underline; }
+ins, a { text-decoration: none; }
+u, .lotus-u { text-decoration: underline; }
+mark { background: #FFFB99; }
+pre, code { font-family: "Lucida Console", Consolas, Monaco; overflow-x: auto; vertical-align: middle; }
+pre { margin-top: 1em; font-size: 12px; border-left: 0.4em solid #ddd; background: #F9F9F9; padding: 10px; line-height: 1.5; word-wrap:break-word; overflow:hidden;}
+code { color: #4d4d4d; background: rgba(214, 214, 214, 0.5); border: 1px solid #bdbdbd; border-radius: 2px 2px; vertical-align:top;}
+small { font-size: 12px; color: #888; }
+::selection     {background: rgba(0, 0, 0, 0.1);}
+::-moz-selection  {background: rgba(0, 0, 0, 0.1);}
+img::selection    {background: rgba(127, 191, 17, 0.2); width: 100%; }
+img::-moz-selection {background: rgba(127, 191, 17, 0.2); width: 100%; }
