--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -90,7 +90,7 @@ nav{
 	}
 }
 .lotus-article {
-	margin: 2em 20% 0 0;
+	margin: 2em 23em 0 0;
 	overflow: hidden;
 	*zoom: 1;
 	min-height: 600px;
@@ -98,11 +98,11 @@ nav{
 .category{
 	position: absolute;
 	top: 0;
-	right: 2%;
-	margin: 2em 0 0 0;
-	padding: 1.5%;
+	right: 0;
+	margin: 2em 2em 0 1.5em;
+	padding: 1.5em 2em;
 	background-color: #fff;
-	width: percent(220);
+	width: 220px;
 }
 
 /* makes the font 33% larger relative to the icon container */
@@ -470,27 +470,31 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
     background: #f1f1ed;
 }
 
-/*************************
- * iMac
-*************************/
 @media only screen and (min-width: 1440px) {
 	.logo p{
 		display: block !important;
 	}
 }
-@media only screen and (min-width: 1024px) and (max-width: 1439px)  {
+@media only screen and (min-width: 1025px) and (max-width: 1439px)  {
 	nav{
 		.text{
 			font-size: 12px;
 		}
+		ul{
+			li{
+				[class^="icon-"]{
+					margin: 0 10% 0 20%;
+				}
+			}
+		}
 	}
 }
-
-/*************************
- * iPad
-*************************/
-@media only screen and (min-width: 768px) and (max-width: 1023px)  {
+@media only screen and (min-width: 768px) and (max-width: 1024px)  {
+	body{
+		margin: 0 0 0 percent(190);
+	}
 	nav{
+		width: percent(150);
 		.text{
 			display: none;
 		}
@@ -503,14 +507,19 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 			}
 		}
 	}
+	.lotus-article{
+		margin: 1em 1.5em 0 0;
+	}
+	.category{
+		position: static;
+		margin: 0 1.5em 1em 0;
+		width: auto;
+	}
 }
-/*************************
- * iPhone
-*************************/
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 	nav{
 		width: 100%;
-		height: 3.5em;
+		height: auto;
 		.logo{
 			display: none;
 		}
@@ -524,12 +533,14 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 			text-align: center;
 			li{
 				display: inline-block;
-				width: 3em;
+				width: 18%;
 				height: 100%;
+				max-width: 72px;
 				font-size: 20px;
 				text-align: center;
 				[class^="icon-"]{
 					margin: 0;
+					line-height: 1.3;
 				}
 			}
 		}
@@ -546,7 +557,7 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 	.category{
 		position: static;
 		width: auto;
-		margin: 1em 2% 0 0;
+		margin: 0 2% 1em 2%;
 	}
 	.rpost{
 		padding: 3%;
@@ -563,16 +574,6 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 	    margin-left: 0;
 	    margin-top: 2em;
 	}
-	.iLight .lotus-nav {
-		background: #f1f1ed;
-		background: -moz-linear-gradient( 90deg, #e3e3e3 0%, #f1f1ed 8%, #f1f1ed 14%, #f1f1ed 100%);
-		background: -webkit-linear-gradient( 90deg, #e3e3e3 0%, #f1f1ed 8%, #f1f1ed 14%, #f1f1ed 100%);
-		background: -ms-linear-gradient( 90deg, #e3e3e3 0%, #f1f1ed 8%, #f1f1ed 14%, #f1f1ed 100%);
-		background: linear-gradient( to 90deg, #e3e3e3 0%, #f1f1ed 8%, #f1f1ed 14%, #f1f1ed 100%);
-		border-right: none;
-		border-bottom: 1px solid #dfdfdf;
-	}
-	.iLight .lotus-nav ul li { border-top: 0; }
 	.lotus-breadcrub { padding-top: 10px;}
 }
 /*
