--- a/static/sass/_reset.scss
+++ b/static/sass/_reset.scss
@@ -5,7 +5,7 @@ html { color: #1F0909; background: #f3f2ee; -webkit-text-size-adjust: 100%; -ms-
 body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, group, menu, nav, section { margin: 0; padding: 0; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 audio, canvas, video { display: inline-block;  }
-body, button, input, select, textarea { font: 500 14px/1.8 "Helvetica Neue",Helvetica,Arial,sans-serif; }
+body, button, input, select, textarea { font: 500 14px/1.8 "Open Sans","Helvetica Neue",Helvetica,Arial,STHeiti,"Microsoft Yahei",sans-serif; }
 table { border-collapse: collapse; border-spacing: 0; width: 100%; }
 th { text-align: inherit; }
 fieldset, img { border: 0; }
@@ -29,9 +29,10 @@ a:hover { text-decoration: underline; }
 ins, a { text-decoration: none; }
 u, .lotus-u { text-decoration: underline; }
 mark { background: #FFFB99; }
-pre, code { font-family: "Lucida Console", Consolas, Monaco; overflow-x: auto; vertical-align: middle; }
-pre { margin-top: 1em; font-size: 12px; border-left: 0.4em solid #ddd; background: #F9F9F9; padding: 10px; line-height: 1.5; word-wrap:break-word; overflow:hidden;}
-code { color: #4d4d4d; background: rgba(214, 214, 214, 0.5); border: 1px solid #bdbdbd; border-radius: 2px 2px; vertical-align:top;}
+pre, code { font-family: Consolas,Menlo,Monaco,"Courier New",monospace; overflow-x: auto; vertical-align: middle; }
+pre { margin-top: 1em; font-size: 13px; border-left: 0.4em solid #ddd; background: #F9F9F9; padding: 10px; line-height: 1.5; word-wrap:break-word; overflow:hidden;}
+code { padding: 3px; color: #4d4d4d; background: rgba(214, 214, 214, 0.5); border-radius: 2px 2px; vertical-align:top;}
+pre code{ padding: 0; background: none; border: none;}
 small { font-size: 12px; color: #888; }
 ::selection     {background: rgba(0, 0, 0, 0.1);}
 ::-moz-selection  {background: rgba(0, 0, 0, 0.1);}
