--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -94,6 +94,9 @@ nav{
 	overflow: hidden;
 	*zoom: 1;
 	min-height: 600px;
+	.lotus-post{
+		margin-top: 1em;
+	}
 }
 .category{
 	position: absolute;
@@ -142,25 +145,26 @@ li[class^="icon-"].icon-large:before, li[class*=" icon-"].icon-large:before {
 .lotus-p, .lotus-pre, .lotus-ul, .lotus-ol, .lotus-dl, .lotus-form, .lotus-hr, .lotus-table { margin-bottom: 1em; vertical-align: middle; }
 
 .lotus blockquote p { margin-bottom: 0.4em; }
-.lotus blockquote p:before {
-    content: "“";
-    font-size: 38px;
-    line-height: 18px;
-    position: relative;
-    color: #c8c8c8;
-    overflow: hidden;
-    top: 18px;
-}
 
-.lotus blockquote p:after {
-    content: "”";
-    font-size: 38px;
-    line-height: 18px;
-    position: relative;
-    color: #c8c8c8;
-    overflow: hidden;
-    top: 14px;
-}
+// .lotus blockquote p:before {
+//     content: "“";
+//     font-size: 38px;
+//     line-height: 18px;
+//     position: relative;
+//     color: #c8c8c8;
+//     overflow: hidden;
+//     top: 18px;
+// }
+// .lotus blockquote p:after {
+//     content: "”";
+//     font-size: 38px;
+//     line-height: 18px;
+//     position: relative;
+//     color: #c8c8c8;
+//     overflow: hidden;
+//     top: 14px;
+// }
+
 h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 
 .lotus h1, .lotus h2, .lotus h3, .lotus h4, .lotus h5, .lotus h6,
@@ -186,10 +190,7 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 .lotus .lotus-last-view { color: #a8a8a8; font-size: 12px; }
 .lotus .lotus-squ { padding: 0 10px; color: #a8a8a8; font-size: 14px;  }
 .lotus .lotus-pagebtn { border-bottom: 1px solid #dedede; margin-top: 2.2em; margin-bottom: 3px; }
-.lotus .lotus-anno { text-align: right;  padding: 5px 10px;font-size: 12px; color: #A0A0A0;
-    background: #e4e4e2;
-    border-top: 1px solid #d0d0d0;
-}
+.lotus .lotus-anno { text-align: right; margin-top: 5em; padding: 5px 10px;font-size: 12px; color: #A0A0A0; border-top: 1px solid #d0d0d0;}
 .lotus .lotus-anno a { color: #1F0909; }
 /*************************
  * lotus layout
@@ -318,6 +319,17 @@ h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
 }
 .lotus-post img:hover {
     cursor: pointer;
+}
+.lotus-post ul{
+	padding-left: 30px;
+}
+.lotus-post li{
+	  list-style-type: disc;
+}
+.lotus-post h3{
+	margin-bottom: 0.5em;
+	padding: 0.3em 0;
+	border-bottom: 1px dotted #ccc;
 }
 .lotus-post .lotus-post-end {
     height: 21px;
