--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html {
   color: #1F0909;
   background: #f3f2ee;
@@ -38,12 +37,10 @@ iframe {
 blockquote {
   padding: 0.5em 1em 0.1em 1em;
   margin-bottom: 1em;
-  background: rgba(214, 214, 214, 0.5);
-  border-width: 1px 1px 1px 0.4em;
-  border-color: #d8d8d8 #d8d8d8 #d8d8d8 #d0d0d0;
-  border-style: solid;
+  border-left: 0.4em solid #ddd;
   vertical-align: middle;
-  border-radius: 0px 2px 2px 0; }
+  border-radius: 0px 2px 2px 0;
+  background: #f9f9f9; }
 
 blockquote blockquote {
   padding: 0 1em 0 1em;
@@ -114,7 +111,6 @@ pre, code {
 pre {
   margin-top: 1em;
   font-size: 13px;
-  border-left: 0.4em solid #ddd;
   background: #F9F9F9;
   padding: 10px;
   line-height: 1.5;
@@ -122,13 +118,15 @@ pre {
   overflow: hidden; }
 
 code {
-  padding: 3px;
+  margin: 0 2px;
+  padding: 1px 4px;
   color: #4d4d4d;
   background: rgba(214, 214, 214, 0.5);
   border-radius: 2px 2px;
   vertical-align: top; }
 
 pre code {
+  margin: 0;
   padding: 0;
   background: none;
   border: none; }
@@ -1052,6 +1050,8 @@ nav {
   overflow: hidden;
   *zoom: 1;
   min-height: 600px; }
+  .lotus-article .lotus-post {
+    margin-top: 1em; }
 
 .category {
   position: absolute;
@@ -1098,24 +1098,6 @@ li[class^="icon-"].icon-large:before, li[class*=" icon-"].icon-large:before {
 
 .lotus blockquote p {
   margin-bottom: 0.4em; }
-
-.lotus blockquote p:before {
-  content: "“";
-  font-size: 38px;
-  line-height: 18px;
-  position: relative;
-  color: #c8c8c8;
-  overflow: hidden;
-  top: 18px; }
-
-.lotus blockquote p:after {
-  content: "”";
-  font-size: 38px;
-  line-height: 18px;
-  position: relative;
-  color: #c8c8c8;
-  overflow: hidden;
-  top: 14px; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
@@ -1219,10 +1201,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .lotus .lotus-anno {
   text-align: right;
+  margin-top: 5em;
   padding: 5px 10px;
   font-size: 12px;
   color: #A0A0A0;
-  background: #e4e4e2;
   border-top: 1px solid #d0d0d0; }
 
 .lotus .lotus-anno a {
@@ -1356,6 +1338,17 @@ h1, h2, h3, h4, h5, h6 {
 
 .lotus-post img:hover {
   cursor: pointer; }
+
+.lotus-post ul {
+  padding-left: 30px; }
+
+.lotus-post li {
+  list-style-type: disc; }
+
+.lotus-post h3 {
+  margin-bottom: 0.5em;
+  padding: 0.3em 0;
+  border-bottom: 1px dotted #ccc; }
 
 .lotus-post .lotus-post-end {
   height: 21px;
