--- a/static/sass/_reset.scss
+++ b/static/sass/_reset.scss
@@ -30,7 +30,7 @@ ins, a { text-decoration: none; }
 u, .lotus-u { text-decoration: underline; }
 mark { background: #FFFB99; }
 pre, code { font-family: Consolas,Menlo,Monaco,"Courier New",monospace; overflow-x: auto; vertical-align: middle; }
-pre { margin-top: 1em; font-size: 13px; background: #F9F9F9; padding: 10px; line-height: 1.5; word-wrap:break-word; overflow:hidden;}
+pre { margin-top: 1em; font-size: 13px; background: #f3f3f3; padding: 10px; line-height: 1.5; word-wrap:break-word; overflow:hidden;}
 code { margin: 0 2px; padding: 1px 4px; color: #4d4d4d; background: rgba(214, 214, 214, 0.5); border-radius: 2px 2px; vertical-align:top;}
 pre code{ margin: 0; padding: 0; background: none; border: none;}
 small { font-size: 12px; color: #888; }
