--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,11 @@ layout: default
         <div class="lotus-nextpage-right"><a class="next" href="{{ page.next.url }}" rel="next">{{ page.next.title | truncatewords:5 }}&nbsp;&raquo;</a></div>
         {% endif %}
     </section>
+</div>
 
+<div class="anchorList">
+    <h3>文章目录</h3>
+    <ul></ul>
 </div>
 
 <!-- Duoshuo Comment BEGIN -->
@@ -52,3 +56,5 @@ var duoshuoQuery = {short_name:"sair"};
     })();
     </script>
 <!-- 多说公共JS代码 end -->
+
+<script src="/static/js/effect.js"></script>
