--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -747,6 +747,8 @@ pre.prettyprint{
 	margin: 0 2em 0 1.5em;
 	padding: 1.5em 2em;
 	width: 220px;
+	max-height: 90%;
+	overflow-y: auto;
 	background: #fff;
 	h3{
 		margin-bottom: 5px;
