--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,9 @@
 <!--[if lt IE 9]>
 <script src="/static/js/html5.js" type="text/javascript"></script>
 <![endif]-->
-<script src="/static/js/jquery.js" type="text/javascript"></script>
+<script src="/static/js/jquery.js"></script>
 </head>
-<body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
-
+<body class="home blog lotus index">
     <nav>
     	<div class="logo">
     		<a href="/index.html" title="logo"><img src="/static/images/logo.jpg" alt=""></a>
@@ -41,14 +40,11 @@
             {% endfor %}
         </ul>
     </nav>
-
     {{ content }}
-
-<footer class="lotus-footer">
+<footer>
 	<p>Copyright © 2010–2015 {{ site.title }} All rights reserved. Design by <a href="http://www.zhanxin.info" target="_blank">zhanxin</a>.</p>
 </footer>
-
-<script src="/static/js/jquery.scrollTo.js" type="text/javascript"></script>
-<script src="/static/js/iLotus.js" type="text/javascript"></script>
+<script src="/static/js/jquery.scrollTo.js"></script>
+<script src="/static/js/iLotus.js"></script>
 </body>
 </html>
