--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,16 @@
 ---
 layout: default
 ---
-<div class="lotus-article rpost">
-    <p class="lotus-breadcrub">
+<div class="lotus-article rpost page-post">
+    <p class="breadcrub">
         <a href="/index.html" rel="nofollow" rel="nofollow" title="首页">Home</a>
         <span> &gt; </span>
         <a href="/archives.html" rel="nofollow" >Archives</a>
         <span> &gt; </span>
         {{ page.title }}
     </p>
-    <h1 class="lotus-pagetit">{{ page.title }}</h1>
-    <p class="lotus-meta">Publish: <time class="date" pubdate="{{ page.date  | date: "%B %e, %Y" }}">{{ page.date | date: "%B %e, %Y" }}</time>&nbsp;&nbsp;
+    <h1 class="pagetit">{{ page.title }}</h1>
+    <p class="meta">Publish: <time class="date" pubdate="{{ page.date  | date: "%B %e, %Y" }}">{{ page.date | date: "%B %e, %Y" }}</time>&nbsp;&nbsp;
             Tag：
             {% if page.category %}
                 <a href="/categories.html#{{ rpost.category }}-ref" target="_blank">{{ page.category }}</a>
@@ -19,21 +19,21 @@ layout: default
                     <a href="/categories.html#{{ item }}-ref" target="_blank">{{ item }}</a>
                 {% endfor %}
             {% endif %}</p>
-    <article  itemscope itemtype="http://schema.org/Article" class="lotus-post">
+    <article class="lotus-post">
     {{ content }}
     </article>
-    <p class="lotus-anno">声明: 本文采用 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" rel="nofollow" target="_blank" title="自由转载-非商用-非衍生-保持署名">BY-NC-SA</a> 授权。转载请注明转自: <a href="{{ post.url }}" title="" rel="nofollow">{{ site.author.name }}</a></p>
-    <section class="lotus-nextpage fn-clear">
+    <p class="anno">声明: 本文采用 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" rel="nofollow" target="_blank" title="自由转载-非商用-非衍生-保持署名">BY-NC-SA</a> 授权。转载请注明转自: <a href="{{ post.url }}" title="" rel="nofollow">{{ site.author.name }}</a></p>
+    <section class="pageturn clearfix">
         {% if page.previous %}
-        <div class="lotus-nextpage-left"><a class="prev" href="{{ page.previous.url }}" rel="prev">&laquo;&nbsp;{{ page.previous.title | truncatewords:5 }}</a></div>
+        <a class="prev" href="{{ page.previous.url }}" rel="prev">&laquo;&nbsp;{{ page.previous.title | truncatewords:5 }}</a>
         {% endif %}
         {% if page.next %}
-        <div class="lotus-nextpage-right"><a class="next" href="{{ page.next.url }}" rel="next">{{ page.next.title | truncatewords:5 }}&nbsp;&raquo;</a></div>
+        <a class="next" href="{{ page.next.url }}" rel="next">{{ page.next.title | truncatewords:5 }}&nbsp;&raquo;</a>
         {% endif %}
     </section>
 </div>
 
-<div class="anchorList">
+<div class="block-catalog">
     <h3>文章目录</h3>
     <ul></ul>
 </div>
