--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 	            {% endif %}
 	            <li class="{{ homeClass }}{{ active }}">
 	                <a href="{{ link.url }}" rel="bookmark" title="{{link.text}}">
-	                    <i class="{{ link.icon }}"></i><span class="text">{{ link.text }}</span>
+	                    <i class="{{ link.icon }}"></i><span>{{ link.text }}</span>
 	                </a>
 	                {{ indicator }}
 	            </li>
