--- a/static/sass/_reset.scss
+++ b/static/sass/_reset.scss
@@ -2,7 +2,7 @@
 // reset style
 //--------------------
 
-/* 防止用户自定义背景颜色对网页的影响，添加让用户可以自定义字体 */
+//防止用户自定义背景颜色对网页的影响，添加让用户可以自定义字体
 html {
 	color: #333;
 	background: #f3f2ee;
@@ -11,23 +11,23 @@ html {
 	text-rendering: optimizelegibility;
 }
 
-/* 内外边距通常让各个浏览器样式的表现位置不同 */
+//内外边距通常让各个浏览器样式的表现位置不同
 body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, menu, nav, section {
 	margin: 0;
 	padding: 0;
 }
 
-/* 重设 HTML5 标签, IE 需要在 js 中 createElement(TAG) */
+//重设 HTML5 标签, IE 需要在 js 中 createElement(TAG)
 article, aside, details, figcaption, figure, footer, header, menu, nav, section {
 	display: block;
 }
 
-/* HTML5 媒体文件跟 img 保持一致 */
+//HTML5 媒体文件跟 img 保持一致
 audio, canvas, video {
 	display: inline-block;
 }
 
-/* 要注意表单元素并不继承父级 font 的问题 */
+//要注意表单元素并不继承父级 font 的问题
 body, button, input, select, textarea {
 	font: 300 1em/1.8 PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans;
 	//font: 500 14px/1.8 "Open Sans","Helvetica Neue",Helvetica,Arial,STHeiti,"Microsoft Yahei",sans-serif;
@@ -39,18 +39,18 @@ input::-moz-focus-inner {
 	border: 0;
 }
 
-/* 去掉各Table cell 的边距并让其边重合 */
+//去掉各Table cell 的边距并让其边重合
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
 
-/* 去除默认边框 */
+//去除默认边框
 fieldset, img {
 	border: 0;
 }
 
-/* 块/段落引用 */
+//块/段落引用
 blockquote {
 	position: relative;
 	color: #999;
@@ -74,18 +74,18 @@ iframe {
 	display: block; 
 }
 
-/* Firefox 以外，元素没有下划线，需添加 */
+//Firefox 以外，元素没有下划线，需添加
 acronym, abbr {
 	border-bottom: 1px dotted;
 	font-variant: normal;
 }
 
-/* 添加鼠标问号，进一步确保应用的语义是正确的（要知道，交互他们也有洁癖，如果你不去掉，那得多花点口舌） */
+//添加鼠标问号，进一步确保应用的语义是正确的（要知道，交互他们也有洁癖，如果你不去掉，那得多花点口舌）
 abbr {
 	cursor: help;
 }
 
-/* 一致的 del 样式 */
+//一致的 del 样式
 del {
 	text-decoration: line-through;
 }
@@ -95,12 +95,12 @@ address, caption, cite, code, dfn, em, th, var {
 	font-weight: 400;
 }
 
-/* 去掉列表前的标识, li 会继承，大部分网站通常用列表来很多内容，所以应该当去 */
+//去掉列表前的标识, li 会继承，大部分网站通常用列表来很多内容，所以应该当去
 ul, ol {
 	list-style: none;
 }
 
-/* 对齐是排版最重要的因素, 别让什么都居中 */
+//对齐是排版最重要的因素, 别让什么都居中
 caption, th {
 	text-align: left;
 }
@@ -109,7 +109,7 @@ q:before, q:after {
 	content: '';
 }
 
-/* 统一上标和下标 */
+//统一上标和下标
 sub, sup {
 	font-size: 75%;
 	line-height: 0;
@@ -118,7 +118,7 @@ sub, sup {
 
 
 :root sub, :root sup {
-	vertical-align: baseline; /* for ie9 and other modern browsers */
+	vertical-align: baseline; //for ie9 and other modern browsers
 }
 
 sup {
@@ -129,7 +129,7 @@ sub {
 	bottom: -0.25em;
 }
 
-/* 让链接在 hover 状态下显示下划线 */
+//让链接在 hover 状态下显示下划线
 a {
 	color: #1abc9c;
 }
@@ -139,23 +139,21 @@ a:hover {
 }
 
 
-/* 默认不显示下划线，保持页面简洁 */
+//默认不显示下划线，保持页面简洁 
 ins, a {
 	text-decoration: none;
 }
 
-
-/* 专名号：虽然 u 已经重回 html5 Draft，但在所有浏览器中都是可以使用的，
- * 要做到更好，向后兼容的话，添加 class="typo-u" 来显示专名号
- * 关于 <u> 标签：http://www.whatwg.org/specs/web-apps/current-work/multipage/text-level-semantics.html#the-u-element
- * 被放弃的是 4，之前一直搞错 http://www.w3.org/TR/html401/appendix/changes.html#idx-deprecated
- * 一篇关于 <u> 标签的很好文章：http://html5doctor.com/u-element/
- */
+//专名号：虽然 u 已经重回 html5 Draft，但在所有浏览器中都是可以使用的，
+//要做到更好，向后兼容的话，添加 class="typo-u" 来显示专名号
+//关于 <u> 标签：http://www.whatwg.org/specs/web-apps/current-work/multipage/text-level-semantics.html#the-u-element
+//被放弃的是 4，之前一直搞错 http://www.w3.org/TR/html401/appendix/changes.html#idx-deprecated
+//一篇关于 <u> 标签的很好文章：http://html5doctor.com/u-element/
 u, .typo-u {
 	text-decoration: underline;
 }
 
-/* 标记，类似于手写的荧光笔的作用 */
+//标记，类似于手写的荧光笔的作用
 mark {
 	background: #fffdd1;
 	border-bottom: 1px solid #ffedce;
@@ -163,7 +161,7 @@ mark {
 	margin: 0 5px;
 }
 
-/* 代码片断 */
+//代码片断
 pre, code, pre tt {
 	font-family: Consolas,Menlo,Monaco,"Courier New",monospace; 
 	overflow-x: auto; 
@@ -196,7 +194,7 @@ pre code{
 	border: none;
 }
 
-/* 一致化 horizontal rule */
+//一致化 horizontal rule
 hr {
   border: none;
   border-bottom: 1px solid #cfcfcf;
@@ -204,9 +202,9 @@ hr {
   height: 10px;
 }
 
-/* 底部印刷体、版本等标记 */
+//底部印刷体、版本等标记
 small, .typo-small,
-/* 图片说明 */
+//图片说明
 figcaption {
 	font-size: 0.9em;
 	color: #888;
@@ -217,7 +215,7 @@ strong, b {
 	color: #000;
 }
 
-/* 强制文本换行 */
+//强制文本换行
 .textwrap, .textwrap td, .textwrap th {
 	word-wrap: break-word;
 	word-break: break-all;
