--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -3,20 +3,22 @@
 @import 'reset';
 @import 'font';
 @import 'mixin';
-@import 'common';
 @import 'css3';
+@import 'common';
+
+$fontfamily : PingFang SC, Verdana, Helvetica Neue, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
 
 /* 保证块/段落之间的空白隔行 */
 .typo p, .typo pre, .typo ul, .typo ol, .typo dl, .typo form, .typo hr, .typo table,
 .typo-p, .typo-pre, .typo-ul, .typo-ol, .typo-dl, .typo-form, .typo-hr, .typo-table, blockquote {
-  margin-bottom: 1.2em
+	margin-bottom: 1.2em;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: PingFang SC, Verdana, Helvetica Neue, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
-  font-weight: 100;
-  color: #000;
-  line-height: 1.35;
+	font-family: $fontfamily;
+	font-weight: 100;
+	color: #000;
+	line-height: 1.35;
 }
 
 /* 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化 */
@@ -33,89 +35,89 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .typo h2, .typo-h2 {
-  font-size: 1.8em;
+	font-size: 1.8em;
 }
 
 .typo h3, .typo-h3 {
-  font-size: 1.6em;
+	font-size: 1.6em;
 }
 
 .typo h4, .typo-h4 {
-  font-size: 1.4em;
+	font-size: 1.4em;
 }
 
 .typo h5, .typo h6, .typo-h5, .typo-h6 {
-  font-size: 1.2em;
+	font-size: 1.2em;
 }
 
 /* 在文章中，应该还原 ul 和 ol 的样式 */
 .typo ul, .typo-ul {
-  margin-left: 1.3em;
-  list-style: disc;
+	margin-left: 1.3em;
+	list-style: disc;
 }
 
 .typo ol, .typo-ol {
-  list-style: decimal;
-  margin-left: 1.9em;
+	list-style: decimal;
+	margin-left: 1.9em;
 }
 
 .typo li ul, .typo li ol, .typo-ul ul, .typo-ul ol, .typo-ol ul, .typo-ol ol {
-  margin-bottom: 0.8em;
-  margin-left: 2em;
+	margin-bottom: 0.8em;
+	margin-left: 2em;
 }
 
 .typo li ul, .typo-ul ul, .typo-ol ul {
-  list-style: circle;
+	list-style: circle;
 }
 
 /* 同 ul/ol，在文章中应用 table 基本格式 */
 .typo table th, .typo table td, .typo-table th, .typo-table td, .typo table caption {
-  border: 1px solid #ddd;
-  padding: 0.5em 1em;
-  color: #666;
+	border: 1px solid #ddd;
+	padding: 0.5em 1em;
+	color: #666;
 }
 
 .typo table th, .typo-table th {
-  background: #fbfbfb;
+	background: #fbfbfb;
 }
 
 .typo table thead th, .typo-table thead th {
-  background: #f1f1f1;
+	background: #f1f1f1;
 }
 
 .typo table caption {
-  border-bottom: none;
+	border-bottom: none;
 }
 
 /* 去除 webkit 中 input 和 textarea 的默认样式  */
 .typo-input, .typo-textarea {
-  -webkit-appearance: none;
-  border-radius: 0;
+	-webkit-appearance: none;
+	border-radius: 0;
 }
 
 .typo-em, .typo em, legend, caption {
-  color: #000;
-  font-weight: inherit;
+	color: #000;
+	font-weight: inherit;
 }
 
 /* 着重号，只能在少量（少于100个字符）且全是全角字符的情况下使用 */
 .typo-em {
-  position: relative;
+	position: relative;
 }
 
 .typo-em:after {
-  position: absolute;
-  top: 0.65em;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-  content: "・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・";
+	position: absolute;
+	top: 0.65em;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	white-space: nowrap;
+	content: "・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・";
 }
 
 /* Responsive images */
 .typo img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 body{
@@ -138,8 +140,8 @@ body{
 	    color: #a8a8a8;
 	}
 	.anno {
-		text-align: right; 
-		margin-top: 5em; 
+		text-align: right;
+		margin-top: 5em;
 		padding: 5px 0;
 		font-size: 12px; 
 		color: #A0A0A0; 
@@ -160,13 +162,13 @@ body{
 }
 
 nav{
+	@include prefixer-value(background,(linear-gradient( 180deg, #292929 0%, #404040 8%, #474747 14%, #474747 100%)));
 	position: fixed;
 	left: 0;
 	top: 0;
 	width: percent(183);
 	height: 100%;
 	background: #474747;
-	@include prefixer-value(background,(linear-gradient( 180deg, #292929 0%, #404040 8%, #474747 14%, #474747 100%)));
 	border-right: 1px solid #212121;
 	.logo{
 		padding: 2.5em 0; 
@@ -178,52 +180,40 @@ nav{
 			width: 40%; 
 			min-width: 40px;
 		}
-		p{
-			display: none;
-		}
 	}
 	ul{
-		list-style: none;
 		border-bottom: 1px solid #313131;
 		li{
-			%hover{
-				text-decoration: none; 
-				box-shadow: 1px 1px 24px rgba(0, 0, 0, 0.8) inset;
-				-moz-transition:  box-shadow .3s linear;
-				-webkit-transition: box-shadow .3s linear;
-				transition: box-shadow .3s linear;
-				text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-			}
 			height: 54px; 
 			display: block; 
-			font-size: 20px; 
 			line-height: 54px; 
-			text-align: left; 
+			text-align: center; 
 			border-top: 1px solid #313131; 
 			overflow: hidden;
 			a{
 				display: block;
-				font-size: 16px;
 				color: #fff;  
 				cursor: pointer;
-				&:hover{
-					@extend %hover;
+				span{
+					display: inline-block;
+					margin-left: 1em;
+					width: 3em;
+					text-align: left;
 				}
 			}
-			&.current a{
-				@extend %hover;
+			&.current a, a:hover {
+				@include shadow((1px 1px 24px rgba(0, 0, 0, 0.8) inset));
+				@include prefixer(transition, (box-shadow .3s linear));
+				text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+				text-decoration: none;
 			}
 			[class^="icon-"]{
 				display: inline-block;
 			    vertical-align: -3px;
-			    margin: 0 10% 0 25%;
 			    width: 1.25em;
 			    text-align: center;
 			}
 		}
-	}
-	.text{
-		font-size: 16px;
 	}
 }
 
