--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,8 +34,10 @@ layout: default
 </div>
 
 <div class="block-catalog">
-    <h3>文章目录</h3>
-    <ul></ul>
+    <div class="conter">
+        <h3>文章目录</h3>
+        <ul></ul>
+    </div>
 </div>
 
 <!-- Duoshuo Comment BEGIN -->
