--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -5,123 +5,34 @@
 @import 'mixin';
 @import 'css3';
 @import 'common';
-
-$fontfamily : PingFang SC, Verdana, Helvetica Neue, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
-
-/* 保证块/段落之间的空白隔行 */
-.typo p, .typo pre, .typo ul, .typo ol, .typo dl, .typo form, .typo hr, .typo table,
-.typo-p, .typo-pre, .typo-ul, .typo-ol, .typo-dl, .typo-form, .typo-hr, .typo-table, blockquote {
-	margin-bottom: 1.2em;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	font-family: $fontfamily;
-	font-weight: 100;
-	color: #000;
-	line-height: 1.35;
-}
-
-/* 标题应该更贴紧内容，并与其他块区分，margin 值要相应做优化 */
-.typo h1, .typo h2, .typo h3, .typo h4, .typo h5, .typo h6,
-.typo-h1, .typo-h2, .typo-h3, .typo-h4, .typo-h5, .typo-h6 {
-	margin-top: 1.2em;
-	margin-bottom: 0.6em;
-	line-height: 1.35;
-}
-
-.typo h1, .typo-h1 {
-	margin: 0.3em 0 0.15em 0;
-	font-size: 2em;
-}
-
-.typo h2, .typo-h2 {
-	font-size: 1.8em;
-}
-
-.typo h3, .typo-h3 {
-	font-size: 1.6em;
-}
-
-.typo h4, .typo-h4 {
-	font-size: 1.4em;
-}
-
-.typo h5, .typo h6, .typo-h5, .typo-h6 {
-	font-size: 1.2em;
-}
-
-/* 在文章中，应该还原 ul 和 ol 的样式 */
-.typo ul, .typo-ul {
-	margin-left: 1.3em;
-	list-style: disc;
-}
-
-.typo ol, .typo-ol {
-	list-style: decimal;
-	margin-left: 1.9em;
-}
-
-.typo li ul, .typo li ol, .typo-ul ul, .typo-ul ol, .typo-ol ul, .typo-ol ol {
-	margin-bottom: 0.8em;
-	margin-left: 2em;
-}
-
-.typo li ul, .typo-ul ul, .typo-ol ul {
-	list-style: circle;
-}
-
-/* 同 ul/ol，在文章中应用 table 基本格式 */
-.typo table th, .typo table td, .typo-table th, .typo-table td, .typo table caption {
-	border: 1px solid #ddd;
-	padding: 0.5em 1em;
-	color: #666;
-}
-
-.typo table th, .typo-table th {
-	background: #fbfbfb;
-}
-
-.typo table thead th, .typo-table thead th {
-	background: #f1f1f1;
-}
-
-.typo table caption {
-	border-bottom: none;
-}
-
-/* 去除 webkit 中 input 和 textarea 的默认样式  */
-.typo-input, .typo-textarea {
-	-webkit-appearance: none;
-	border-radius: 0;
-}
-
-.typo-em, .typo em, legend, caption {
-	color: #000;
-	font-weight: inherit;
-}
-
-/* 着重号，只能在少量（少于100个字符）且全是全角字符的情况下使用 */
-.typo-em {
-	position: relative;
-}
-
-.typo-em:after {
-	position: absolute;
-	top: 0.65em;
-	left: 0;
-	width: 100%;
-	overflow: hidden;
-	white-space: nowrap;
-	content: "・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・";
-}
-
-/* Responsive images */
-.typo img {
-	max-width: 100%;
-}
+@import 'typo';
 
 body{
-	margin: 0 0 0 percent(224);
+	padding: 1.5em 19em 0 10%;
+}
+
+//主体部分
+.lotus-article {
+	margin: 0 3.5% 0 2.5%;
+	overflow: hidden;
+	*zoom: 1;
+	min-height: 600px;
+	.lotus-post{
+		margin-top: 2em;
+		word-break: break-all;
+	}
+}
+
+//右侧悬浮
+.block-category, .block-catalog{
+	position: absolute;
+	top: 1.5em;
+	right: 1.5%;
+	background: #fff;
+	width: 19em;
+	.conter{
+		padding: 1.5em 2em;
+	}
 }
 
 .lotus{
@@ -166,7 +77,7 @@ nav{
 	position: fixed;
 	left: 0;
 	top: 0;
-	width: percent(183);
+	width: 10%;
 	height: 100%;
 	background: #474747;
 	border-right: 1px solid #212121;
@@ -214,17 +125,6 @@ nav{
 			    text-align: center;
 			}
 		}
-	}
-}
-
-.lotus-article {
-	margin: 2em 25em 0 0;
-	overflow: hidden;
-	*zoom: 1;
-	min-height: 600px;
-	.lotus-post{
-		margin-top: 2em;
-		word-break: break-all;
 	}
 }
 
@@ -300,17 +200,6 @@ nav{
 	}
 }
 
-//右侧悬浮
-.block-category, .block-catalog{
-	position: absolute;
-	top: 2em;
-	right: 0;
-	margin: 0 2em 0 0;
-	padding: 1.5em 2em;
-	background-color: #fff;
-	width: 18em;
-}
-
 //分类列表
 .block-category{
 	ul{
@@ -322,7 +211,6 @@ nav{
 .block-catalog{
 	max-height: 81%;
 	overflow-y: auto;
-	background: #fff;
 	h3{
 		margin-bottom: 0.5em;
 		font-size: 1.2em;
@@ -412,14 +300,12 @@ li[class^="icon-"].icon-large:before, li[class*=" icon-"].icon-large:before {
 }
 
 
+
 //-----------------
 //media
 //-----------------
-@media only screen and (min-width: 1440px) {
-	
-}
 @media only screen and (min-width: 1025px) and (max-width: 1439px)  {
-	
+
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px)  {
 	
@@ -427,12 +313,13 @@ li[class^="icon-"].icon-large:before, li[class*=" icon-"].icon-large:before {
 @media only screen and (min-width: 320px) and (max-width: 767px) {
 	
 }
+
+
 @media print {
 	.lotus-nav {
 		display: none;
 	}
 }
-
 @media screen{
 	.str{color:#080}
 	.kwd{color:#004488}
